--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: History-of-the-Water-Supply-of-the-World-arranged-in-a-comprehensive-form-from-eminent-author__66130
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 66130-h/images/cover.jpg
 creator:
   author:
     agent_name: Bell, Thomas J. (Thomas Jefferson)
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '53647'
     url: http://www.gutenberg.org/2009/agents/53647
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66130#History-of-the-Water-Supply-of-the-World-arranged-in-a-comprehensive-form-from-eminent-author_
 gutenberg_issued: '2021-08-24'
 identifiers:
   gutenberg: '66130'
